--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "alias": "^0.0.5",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "2.1.1",
     "lucide-react": "^0.453.0",
